--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -69,6 +69,7 @@ body {
   height: 100%;
   scroll-behavior: smooth;
   color: var(--color-white);
+  overflow-x: hidden;
   background-color: var(--color-background);
 }
 
