--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -41,12 +41,10 @@
 :root {
   --color-black: #000000;
   --color-white: #ffffff;
-  --color-primary: #189fb0;
+  --color-primary: #d434fe;
   --color-background: #150e28;
-  --color-scrollbar-thumb-border: #0e5e69;
-  --color-scrollbar-thumb-background: #ffffff80;
-  --color-hero-background-top-gradient: #00cadc;
-  --color-hero-background-bottom-gradient: #dee5e5;
+  --color-scrollbar-background: #d634fe26;
+  --color-scrollbar-thumb-background: var(--color-primary);
 }
 
 * {
@@ -85,14 +83,14 @@ h6 {
 
 ::-webkit-scrollbar {
   width: 5px;
-  background-color: var(--color-primary);
+  background-color: var(--color-scrollbar-background);
 }
 
 ::-webkit-scrollbar-thumb {
   height: 64px;
   border-radius: 100vh;
   background-clip: padding-box;
-  border: 4px solid var(--color-scrollbar-thumb-border);
+  /* border: 4px solid var(--color-scrollbar-thumb-border); */
   background-color: var(--color-scrollbar-thumb-background);
 }
 
