--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -41,6 +41,7 @@
 :root {
   --color-black: #000000;
   --color-white: #ffffff;
+  --color-gray: #bdbbc3;
   --color-primary: #d434fe;
   --color-background: #150e28;
   --color-scrollbar-background: #d634fe26;
