--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -82,8 +82,10 @@ h6 {
   font-family: 'clash-display';
 }
 
-#layout {
+#layout,
+#navigation {
   transition: opacity 0.5s ease;
+  opacity: 0.5;
 }
 
 ::-webkit-scrollbar {
