--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -126,7 +126,7 @@ input:-webkit-autofill:active {
   transition: background-color 5000s ease-in-out 0s;
 }
 
-.bg-hero {
+/* .bg-hero {
   position: absolute;
   background: url('assets/flare.png'), #150e28;
   background-position: -184.527px 3.278px;
@@ -141,4 +141,4 @@ input:-webkit-autofill:active {
   background-repeat: no-repeat;
   background-size: contain;
   position: absolute;
-}
+} */
